Improve YouTube import workflow
